# cardano-wallet

./: .editorconfig  .envrc  .git-blame-ignore-revs  .gitattributes  .gitignore  .hlint.yaml  .readthedocs.yaml  .stylish-haskell.yaml  .travis.yml  .weeder.yaml  404.html  CONTRIBUTING.md  ERA-CHANGES.md  Inventory.md  LICENSE  MAINTAINERS.md  README.md  README.rst  SECURITY.md  TODO.md  archives.html  bors.toml  cabal-nix.project  cabal.project  cabal.project.freeze  cardano-1.14.x.yaml  cardano-1.15.x.yaml  cardano-1.16.x.yaml  cardano-1.17.x.yaml  cardano-1.18.x.yaml  cardano-1.19.dev1.yaml  cardano-1.19.x.yaml  cardano-1.22.1.yaml  cardano-1.25.0-pre.yaml  cardano-1.25.1.yaml  cardano-1.28.0.yaml  cardano-next.yaml  cardano-wallet.cabal  check-cabal-project.sh  concepts.html  (+46 more)
lib/address-derivation-discovery/: address-derivation-discovery.cabal
lib/api/: cardano-wallet-api.cabal  specifications
lib/api/src/Cardano/Wallet/: Api.hs  Shelley.hs  Version.hs
lib/application/: CHANGELOG.md  cardano-wallet-application.cabal
lib/application-extras/: CHANGELOG.md  cardano-wallet-application-extras.cabal
lib/application-extras/lib/Cardano/Wallet/: Options.hs
lib/application-extras/lib/System/Environment/: Extended.hs
lib/application-tls/: CHANGELOG.md  cardano-wallet-application-tls.cabal
lib/application-tls/lib/Cardano/X509/: Configuration.hs
lib/application-tls/lib/Data/X509/: Extra.hs
lib/application/app/shelley/: cardano-wallet.hs
lib/application/shelley/Cardano/Wallet/: Application.hs
lib/balance-tx/: cardano-balance-tx.cabal
lib/balance-tx/lib/Cardano/Tx/: Balance.hs
lib/balance-tx/lib/Cardano/Write/: Tx.hs
lib/balance-tx/test/data/signedTxs/: 103.cbor  106.cbor  107.cbor  108.cbor  11.cbor  110.cbor  111.cbor  112.cbor  113.cbor  114.cbor  116.cbor  120.cbor  122.cbor  123.cbor  124.cbor  126.cbor  128.cbor  129.cbor  13.cbor  130.cbor  131.cbor  134.cbor  135.cbor  136.cbor  137.cbor  138.cbor  139.cbor  14.cbor  141.cbor  145.cbor  149.cbor  152.cbor  16.cbor  18.cbor  2.cbor  20.cbor  22.cbor  23.cbor  25.cbor  (+38 more)
lib/balance-tx/test/spec/: run-test-suite.hs
lib/base/: cardano-wallet-base.cabal
lib/base/test/: base-unit-test.hs
lib/bech32/: README.md  bech32.cabal
lib/bech32/test/: Spec.hs
lib/benchmarks/: cardano-wallet-benchmarks.cabal
lib/benchmarks/exe/: EraFun.hs  api-bench.hs  benchmark-history.hs  db-bench.hs  latency-bench.hs  read-blocks.hs  restore-bench.hs
lib/buildkite/: cardano-wallet-buildkite.cabal
lib/buildkite/exe/: artifacts-csv.hs  delete-logs.hs
lib/buildkite/src/Buildkite/: API.hs  Artifacts.hs  Client.hs  Connection.hs  LimitsLock.hs
lib/byron/: cardano-wallet-byron.cabal  cardano-wallet.cabal
lib/byron/bench/: Latency.hs  Restore.hs
lib/byron/exe/: cardano-wallet-byron.hs
lib/byron/test/integration/: Main.hs
lib/cardano-api-extra/: cardano-api-extra.cabal
lib/cardano-api-extra/test/spec/: run-test-suite.hs
lib/cardano-wallet-read/: cardano-wallet-read.agda-lib  cardano-wallet-read.cabal
lib/cardano-wallet-read/agda/: EverythingCWRead.agda
lib/cardano-wallet-read/test/: run-tests.hs
lib/cli/: cardano-wallet-cli.cabal
lib/cli/src/Cardano/: CLI.hs
lib/cli/test/: cli-docs.md  generated.md
lib/coin-selection/: cardano-coin-selection.cabal  cardano-wallet-coin-selection.cabal
lib/coin-selection/bench/: UTxOIndexBench.hs
lib/coin-selection/lib/Cardano/: CoinSelection.hs
lib/conversions/: cardano-wallet-conversions.cabal
lib/core/: cardano-wallet-core.cabal
lib/core-integration/: cardano-wallet-core-integration.cabal
lib/core-integration/extra/Plutus/: CurrencyContract.hs  FlatInteger.hs  README.md
lib/core-integration/src/js/: mock-daedalus.js
lib/core-integration/test/data/: game-sm-success_1-1.json  game-sm-success_1-2.json
lib/core/bench/: db-bench.hs  restore-bench.hs
lib/core/bench/db/: Main.hs
lib/core/exe/: local-cluster.hs
lib/core/src/Cardano/: .#Wallet.hs  CLI.hs  Environment.hs  Pool.hs  Wallet.hs
lib/core/src/Control/: Cache.hs
lib/core/src/Data/: Quantity.hs
lib/core/src/Network/: Ntp.hs
lib/core/src/UnliftIO/: Compat.hs
lib/core/test/bench/: Main.hs
lib/core/test/data/: icarusDerivationPrefix-v2020-10-07.sqlite  metaFee-v2020-11-26.sqlite  token-metadata.json
lib/core/test/integration/: Main.hs  README.md  cardano-wallet-core-integration.cabal  shelley-integration-test.hs
lib/core/test/unit/: Main.hs
lib/crypto-hash-extra/: crypto-hash-extra.cabal
lib/crypto-primitives/: crypto-primitives.cabal
lib/crypto-primitives/src/Cryptography/: Core.hs  Primitives.hs
lib/customer-deposit-wallet/: customer-deposit-wallet.cabal  external-signing.md
lib/customer-deposit-wallet/data/: swagger.json
lib/customer-deposit-wallet/spec/: customer-deposit-wallet.lagda.md
lib/customer-deposit-wallet/spec/Cardano/: WalletExperiment.agda
lib/customer-deposit-wallet/spec/Haskell/: Reasoning.lagda.md
lib/customer-deposit-wallet/spec/openapi/: HTTP.yaml
lib/delta-chain/: README.md  delta-chain.cabal
lib/delta-chain/src/Data/: Chain.hs  Table.hs
lib/delta-chain/src/Database/: Schema.hs
lib/delta-chain/src/Demo/: Database.hs
lib/delta-store/: README.md  delta-store.cabal
lib/delta-store/src/Data/: DBVar.hs  QueryStore.hs  Store.hs
lib/delta-store/src/Test/: DBVar.hs  Store.hs
lib/delta-table/: README.md  delta-table.cabal
lib/delta-table/src/Data/: Chain.hs  Table.hs
lib/delta-table/src/Database/: Schema.hs  Table.hs
lib/delta-table/src/Demo/: Database.hs  TableOld.hs
lib/delta-types/: CHANGELOG.md  README.md  delta-types.cabal
lib/delta-types/src/Data/: Delta.hs  DeltaMap.hs
lib/exe/: CHANGELOG.md  cardano-wallet-exe.cabal
lib/exe/app/: cardano-wallet.hs
lib/exe/app/deposit/: cardano-deposit-wallet.hs
lib/exe/lib/Cardano/: CLI.hs
lib/faucet/: faucet.cabal  openapi.json
lib/faucet/exe/: Faucet.hs
lib/faucet/lib/Cardano/: Faucet.hs
plutus-e2e/: README.md  cabal.project  default.nix  plutus-e2e.cabal  shell.nix
plutus-e2e/nix/: haskell.nix
plutus-e2e/src/Test/PlutusE2E/: Base.hs
plutus-e2e/test/: Main.hs
(+14030 files in other folders)
