name:                cardano-wallet
version:             2019.5.24
synopsis:            The Wallet Backend for a Cardano node.
description:         Please see README.md
homepage:            https://github.com/input-output-hk/cardano-wallet
author:              IOHK Engineering Team
maintainer:          operations@iohk.io
copyright:           2019 IOHK
license:             MIT
license-file:        LICENSE
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

-- Dummy library sadly necessary for 'shc' to compute
-- code-coverage correctly ¯\_(ツ)_/¯
library
  hs-source-dirs: .

executable cardano-wallet
  default-language:
      Haskell2010
  default-extensions:
      NoImplicitPrelude
      OverloadedStrings
  ghc-options:
      -threaded -rtsopts
      -Wall
      -Werror
      -O2
  build-depends:
      base
    , aeson
    , aeson-pretty
    , bytestring
    , cardano-wallet-cli
    , cardano-wallet-core
    , cardano-wallet-http-bridge
    , docopt
    , http-client
    , servant-client
    , servant-client-core
    , servant-server
    , text
    , text-class
    , warp
  other-modules:
      Paths_cardano_wallet
  hs-source-dirs:
      exe/wallet
  main-is:
      Main.hs

executable cardano-wallet-launcher
  default-language:
      Haskell2010
  default-extensions:
      NoImplicitPrelude
      OverloadedStrings
  ghc-options:
      -threaded -rtsopts
      -Wall
      -Werror
      -O2
  build-depends:
      base
    , cardano-wallet-cli
    , cardano-wallet-launcher
    , directory
    , docopt
    , filepath
    , fmt
    , process
    , say
    , text
    , text-class
  other-modules:
      Paths_cardano_wallet
  hs-source-dirs:
      exe/launcher
  main-is:
     Main.hs
