name:                cardano-wallet
version:             2019.7.2
synopsis:            The Wallet Backend for a Cardano node.
description:         Please see README.md
homepage:            https://github.com/input-output-hk/cardano-wallet
author:              IOHK Engineering Team
maintainer:          operations@iohk.io
copyright:           2019 IOHK
license:             MIT
license-file:        LICENSE
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

flag development
    description: Disable `-Werror`
    default: False
    manual: True

-- Dummy library sadly necessary for 'shc' to compute
-- code-coverage correctly ¯\_(ツ)_/¯
library
  hs-source-dirs: .

executable cardano-wallet
  default-language:
      Haskell2010
  default-extensions:
      NoImplicitPrelude
      OverloadedStrings
  ghc-options:
      -threaded -rtsopts
      -Wall
      -O2
  if (!flag(development))
    ghc-options:
      -Werror
  build-depends:
      base
    , aeson-pretty
    , async
    , bytestring
    , cardano-wallet-cli
    , cardano-wallet-core
    , cardano-wallet-http-bridge
    , cardano-wallet-launcher
    , directory
    , docopt
    , filepath
    , fmt
    , http-client
    , iohk-monitoring
    , process
    , servant-client
    , servant-client-core
    , servant-server
    , text
    , text-class
    , warp
  hs-source-dirs:
      exe/wallet
  main-is:
      Main.hs
