cabal-version:      3.6
name:               cardano-wallet-api
version:            0.2024.8.29
synopsis:           Cardano wallet http api.
description:        Please see README.md
homepage:           https://github.com/cardano-foundation/cardano-wallet
author:             Cardano Foundation (High Assurance Lab)
maintainer:         hal@cardanofoundation.org
copyright:          2018-2022 IOHK, 2024 Cardano Foundation
license:            Apache-2.0
category:           Web
build-type:         Simple

extra-source-files:
  extra/Plutus/*.hs
  specifications/api/swagger.yaml

common language
  default-language:   Haskell2010
  default-extensions:
    NoImplicitPrelude
    OverloadedStrings

common opts-lib
  ghc-options: -Wall -Wcompat -Wredundant-constraints -Wunused-packages

  if flag(release)
    ghc-options: -O2 -Werror

flag release
  description: Enable optimization and `-Werror`
  default:     False
  manual:      True

library
  import:          language, opts-lib
  hs-source-dirs:  src
  build-depends:
    , address-derivation-discovery
    , aeson
    , base
    , bech32
    , bech32-th
    , binary
    , bytestring
    , cardano-addresses
    , cardano-api:{cardano-api, internal}
    , cardano-balance-tx:{cardano-balance-tx, internal}
    , cardano-binary
    , cardano-crypto
    , cardano-ledger-core
    , cardano-wallet
    , cardano-wallet-launcher
    , cardano-wallet-network-layer
    , cardano-wallet-primitive
    , cardano-wallet-read
    , cardano-wallet-secrets
    , containers
    , contra-tracer
    , crypto-primitives
    , deepseq
    , either
    , errors
    , extra
    , fmt
    , generic-lens
    , hashable
    , http-api-data
    , http-media
    , http-types
    , int-cast
    , iohk-monitoring
    , memory
    , mtl
    , network-uri
    , OddWord
    , quiet
    , random
    , safe
    , servant
    , servant-client
    , servant-server
    , text
    , text-class
    , time
    , transformers
    , unliftio
    , wai

  exposed-modules:
    Cardano.Wallet.Api
    Cardano.Wallet.Api.Aeson
    Cardano.Wallet.Api.Aeson.Variant
    Cardano.Wallet.Api.Client
    Cardano.Wallet.Api.Clients.Byron
    Cardano.Wallet.Api.Clients.Network
    Cardano.Wallet.Api.Clients.Shelley
    Cardano.Wallet.Api.Clients.Testnet.Byron
    Cardano.Wallet.Api.Clients.Testnet.Id
    Cardano.Wallet.Api.Clients.Testnet.Shelley
    Cardano.Wallet.Api.Hex
    Cardano.Wallet.Api.Http.Logging
    Cardano.Wallet.Api.Http.Server
    Cardano.Wallet.Api.Http.Server.Error
    Cardano.Wallet.Api.Http.Server.Error.AssignReedemers
    Cardano.Wallet.Api.Http.Server.Error.IsServerError
    Cardano.Wallet.Api.Http.Server.Handlers.MintBurn
    Cardano.Wallet.Api.Http.Server.Handlers.NetworkInformation
    Cardano.Wallet.Api.Http.Server.Handlers.TxCBOR
    Cardano.Wallet.Api.Http.Shelley.Server
    Cardano.Wallet.Api.Lib.ApiAsArray
    Cardano.Wallet.Api.Lib.ApiT
    Cardano.Wallet.Api.Lib.ExtendedObject
    Cardano.Wallet.Api.Lib.Options
    Cardano.Wallet.Api.Link
    Cardano.Wallet.Api.Types
    Cardano.Wallet.Api.Types.Amount
    Cardano.Wallet.Api.Types.BlockHeader
    Cardano.Wallet.Api.Types.Certificate
    Cardano.Wallet.Api.Types.Era
    Cardano.Wallet.Api.Types.Error
    Cardano.Wallet.Api.Types.Key
    Cardano.Wallet.Api.Types.MintBurn
    Cardano.Wallet.Api.Types.Primitive
    Cardano.Wallet.Api.Types.RestorationMode
    Cardano.Wallet.Api.Types.SchemaMetadata
    Cardano.Wallet.Api.Types.Transaction
    Cardano.Wallet.Api.Types.WalletAsset
    Cardano.Wallet.Api.Types.WalletAssets
  other-modules:
    Paths_cardano_wallet_api
