cabal-version: 3.6
name:          cardano-wallet-api
version:       0.2026.2.14
synopsis:      Cardano wallet http api.
description:   Please see README.md
homepage:      https://github.com/cardano-foundation/cardano-wallet
author:        Cardano Foundation (High Assurance Lab)
maintainer:    hal@cardanofoundation.org
copyright:     2018-2022 IOHK, 2024 Cardano Foundation
license:       Apache-2.0
category:      Web
build-type:    Simple

common language
  default-language:   Haskell2010
  default-extensions:
    NoImplicitPrelude
    OverloadedStrings

common opts-lib
  ghc-options: -Wall -Wcompat -Wredundant-constraints -Wunused-packages

  if flag(release)
    ghc-options: -O2 -Werror

flag release
  description: Enable optimization and `-Werror`
  default:     False
  manual:      True

library
  import:          language, opts-lib
  hs-source-dirs:  src
  build-depends:
    , address-derivation-discovery
    , aeson
    , base
    , bech32
    , bech32-th
    , binary
    , bytestring
    , cardano-addresses             >=4.0.2     && <4.1
    , cardano-api                   >=10.16.0.0 && <10.17
    , cardano-balance-tx
    , cardano-balance-tx:internal
    , cardano-binary                >=1.7.1.0   && <1.8
    , cardano-crypto                >=1.2.0     && <1.3
    , cardano-ledger-api            >=1.11.0.0  && <1.12
    , cardano-ledger-core           >=1.17.0.0  && <1.18
    , cardano-wallet
    , cardano-wallet-launcher
    , cardano-wallet-network-layer
    , cardano-wallet-primitive
    , cardano-wallet-read
    , cardano-wallet-secrets
    , containers
    , contra-tracer
    , crypto-primitives
    , deepseq
    , either
    , errors
    , extra
    , fmt
    , generic-lens
    , hashable
    , http-api-data
    , http-media
    , http-types
    , int-cast
    , iohk-monitoring               >=0.2.0.0   && <0.3
    , memory
    , mtl
    , network-uri
    , OddWord
    , quiet
    , random
    , safe
    , servant
    , servant-client
    , servant-server
    , text
    , text-class
    , time
    , transformers
    , unliftio
    , wai

  exposed-modules:
    Cardano.Wallet.Api
    Cardano.Wallet.Api.Aeson
    Cardano.Wallet.Api.Aeson.Variant
    Cardano.Wallet.Api.Client
    Cardano.Wallet.Api.Clients.Byron
    Cardano.Wallet.Api.Clients.Network
    Cardano.Wallet.Api.Clients.Shelley
    Cardano.Wallet.Api.Clients.Testnet.Byron
    Cardano.Wallet.Api.Clients.Testnet.Id
    Cardano.Wallet.Api.Clients.Testnet.Shelley
    Cardano.Wallet.Api.Hex
    Cardano.Wallet.Api.Http.Logging
    Cardano.Wallet.Api.Http.Server
    Cardano.Wallet.Api.Http.Server.Error
    Cardano.Wallet.Api.Http.Server.Error.AssignReedemers
    Cardano.Wallet.Api.Http.Server.Error.IsServerError
    Cardano.Wallet.Api.Http.Server.Handlers.MintBurn
    Cardano.Wallet.Api.Http.Server.Handlers.NetworkInformation
    Cardano.Wallet.Api.Http.Server.Handlers.TxCBOR
    Cardano.Wallet.Api.Http.Shelley.Server
    Cardano.Wallet.Api.Lib.ApiAsArray
    Cardano.Wallet.Api.Lib.ApiT
    Cardano.Wallet.Api.Lib.ExtendedObject
    Cardano.Wallet.Api.Lib.Options
    Cardano.Wallet.Api.Link
    Cardano.Wallet.Api.Types
    Cardano.Wallet.Api.Types.Amount
    Cardano.Wallet.Api.Types.BlockHeader
    Cardano.Wallet.Api.Types.Certificate
    Cardano.Wallet.Api.Types.Era
    Cardano.Wallet.Api.Types.Error
    Cardano.Wallet.Api.Types.Key
    Cardano.Wallet.Api.Types.MintBurn
    Cardano.Wallet.Api.Types.Primitive
    Cardano.Wallet.Api.Types.RestorationMode
    Cardano.Wallet.Api.Types.SchemaMetadata
    Cardano.Wallet.Api.Types.Transaction
    Cardano.Wallet.Api.Types.WalletAsset
    Cardano.Wallet.Api.Types.WalletAssets

  other-modules:   Paths_cardano_wallet_api
