cabal-version:   3.0
name:            cardano-wallet-application-extras
version:         0.1.0.0
synopsis:        modules to support applications for the cardano wallet
license:         Apache-2.0
license-file:    LICENSE
author:          HAL, Cardano Foundation
maintainer:      hal@cardanofoundation.org
build-type:      Simple
extra-doc-files: CHANGELOG.md

library
  default-language:   Haskell2010
  default-extensions:
    NoImplicitPrelude
    DerivingStrategies
    OverloadedStrings

  ghc-options:
    -O2 -Wall -Wincomplete-record-updates -Wincomplete-uni-patterns
    -Wunused-foralls -Wunused-foralls -fprint-explicit-foralls
    -fprint-explicit-kinds -Wcompat -Widentities
    -Werror=incomplete-patterns -Wredundant-constraints
    -Wpartial-fields -Wtabs -fhelpful-errors -fprint-expanded-synonyms
    -fwarn-unused-do-bind -fwarn-incomplete-uni-patterns
    -freverse-errors

  exposed-modules:
    Cardano.Wallet.Network.Ports
    System.Environment.Extended

  hs-source-dirs:     lib
  build-depends:
    , base                   ^>=4.14.3.0
    , contra-tracer          ^>=0.1.0.2
    , iohk-monitoring        ^>=0.1.11.3
    , iohk-monitoring-extra  ^>=0.1
    , network                ^>=3.1.4.0
    , network-uri            ^>=2.6.4.2
    , optparse-applicative   ^>=0.17.1
    , random-shuffle         ^>=0.0.4
    , safe                   ^>=0.3.19
    , streaming-commons      ^>=0.2.2.6
    , temporary              ^>=1.3
    , text                   ^>=1.2.4.1
    , text-class             ^>=2023.7.18
    , unliftio               ^>=0.2.24
    , unliftio-core          ^>=0.2.1
