cabal-version:   3.0
name:            cardano-wallet-application-extras
version:         0.1.0.0
synopsis:        modules to support applications for the cardano wallet
license:         Apache-2.0
license-file:    LICENSE
author:          Cardano Foundation (High Assurance Lab)
maintainer:      hal@cardanofoundation.org
build-type:      Simple
extra-doc-files: CHANGELOG.md

library
  default-language:   Haskell2010
  default-extensions:
    NoImplicitPrelude
    DerivingStrategies
    OverloadedStrings

  ghc-options:
    -O2 -Wall -Wincomplete-record-updates -Wincomplete-uni-patterns
    -Wunused-foralls -Wunused-foralls -fprint-explicit-foralls
    -fprint-explicit-kinds -Wcompat -Widentities
    -Werror=incomplete-patterns -Wredundant-constraints
    -Wpartial-fields -Wtabs -fhelpful-errors -fprint-expanded-synonyms
    -fwarn-unused-do-bind -fwarn-incomplete-uni-patterns
    -freverse-errors

  exposed-modules:
    Cardano.Wallet.Network.Ports
    System.Environment.Extended

  hs-source-dirs:     lib
  build-depends:
    , base
    , network                ^>=3.1.4.0
    , network-uri            ^>=2.6.4.2
    , random-shuffle         ^>=0.0.4
    , safe                   ^>=0.3.19
    , streaming-commons      ^>=0.2.2.6
    , text                   ^>=2.0.2
    , text-class             ^>=2024.3.24
    , unliftio               ^>=0.2.24
