cabal-version:   3.4
name:            cardano-wallet-application-tls
version:         0.2025.3.31
synopsis:        cardano-wallet application tls support
license:         Apache-2.0
license-file:    LICENSE
author:          hal team
maintainer:      hal@cardanofoundation.org
category:        Crypto
build-type:      Simple
extra-doc-files: CHANGELOG.md

common language
  default-language:   Haskell2010
  default-extensions:
    NoImplicitPrelude
    OverloadedStrings

common opts-exe
  ghc-options:
    -threaded -rtsopts -Wall -Wredundant-constraints -Wunused-packages

  if flag(release)
    ghc-options: -O2 -Werror

common opts-lib
  ghc-options: -Wall -Wcompat -Wredundant-constraints -Wunused-packages

  if flag(release)
    ghc-options: -O2 -Werror

flag release
  description: Enable optimization and `-Werror`
  default:     False
  manual:      True

library
  import:          language, opts-lib
  hs-source-dirs:  lib
  build-depends:
    , aeson                    >=2
    , asn1-encoding
    , asn1-types
    , base
    , base64-bytestring
    , bytestring
    , crypton
    , crypton-x509
    , crypton-x509-store
    , crypton-x509-validation
    , data-default             >=0.8.0.0 && <0.9
    , data-default-class
    , directory
    , exceptions
    , filepath
    , hourglass
    , ip                       >=1.7.4
    , text
    , tls
    , warp-tls                 >=3.4.7
    , wide-word
    , yaml

  exposed-modules:
    Cardano.Wallet.Application.Tls
    Cardano.X509.Configuration
    Data.X509.Extra

test-suite unit
  import:             language, opts-exe
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            Main.hs
  build-tool-depends: hspec-discover:hspec-discover
  build-depends:
    , base
    , bytestring
    , cardano-wallet-application-tls
    , cardano-wallet-test-utils
    , crypton-connection
    , crypton-x509
    , crypton-x509-store
    , crypton-x509-system
    , data-default                    >=0.8.0.0 && <0.9
    , directory
    , filepath
    , hspec
    , http-client
    , http-client-tls
    , http-types
    , network
    , streaming-commons
    , tls
    , unliftio
    , wai
    , warp
    , warp-tls

  other-modules:      Cardano.Wallet.Application.TlsSpec
