cabal-version:   3.4
name:            cardano-wallet-application
version:         2025.12.15
synopsis:        cardano-wallet executable

-- description:
license:         Apache-2.0
license-file:    LICENSE
author:          hal team
maintainer:      hf@cardanofoundation.org

-- copyright:
category:        Crypto
build-type:      Simple
extra-doc-files: CHANGELOG.md

-- extra-source-files:

common language
  default-language:   Haskell2010
  default-extensions:
    NoImplicitPrelude
    OverloadedStrings

common opts-exe
  ghc-options:
    -threaded -rtsopts -Wall -Wredundant-constraints -Wunused-packages

  if flag(release)
    ghc-options: -O2 -Werror

common opts-lib
  ghc-options: -Wall -Wcompat -Wredundant-constraints -Wunused-packages

  if flag(release)
    ghc-options: -O2 -Werror

flag release
  description: Enable optimization and `-Werror`
  default:     False
  manual:      True

executable cardano-wallet
  import:           language, opts-exe
  main-is:          cardano-wallet.hs
  hs-source-dirs:   app/shelley
  build-depends:    base >=4.18.2.0 && <4.21
  default-language: Haskell2010
  build-depends:
    , base
    , cardano-wallet
    , cardano-wallet-api
    , cardano-wallet-application
    , cardano-wallet-application-tls
    , cardano-wallet-application:shelley
    , cardano-wallet-launcher
    , cardano-wallet-network-layer
    , contra-tracer
    , iohk-monitoring                     >=0.2.0.0 && <0.3
    , iohk-monitoring-extra
    , lobemo-backend-ekg                  >=0.2.0.0 && <0.3
    , network-uri
    , optparse-applicative
    , text
    , text-class
    , transformers
    , unliftio
    , with-utf8

library shelley
  import:          language, opts-lib
  visibility:      public
  hs-source-dirs:  shelley
  build-depends:
    , address-derivation-discovery
    , base
    , cardano-wallet
    , cardano-wallet-api
    , cardano-wallet-application
    , cardano-wallet-application-tls
    , cardano-wallet-network-layer
    , cardano-wallet-primitive
    , cardano-wallet-ui:common
    , cardano-wallet-ui:shelley
    , contra-tracer
    , extra
    , generic-lens
    , network
    , network-uri
    , servant-server
    , streaming-commons
    , transformers
    , unliftio
    , warp
    , Win32-network

  exposed-modules: Cardano.Wallet.Application

library
  import:          language, opts-lib
  hs-source-dirs:  lib
  build-depends:
    , address-derivation-discovery
    , aeson
    , aeson-pretty
    , ansi-terminal
    , base
    , bytestring
    , cardano-addresses               >=4.0.2   && <4.1
    , cardano-wallet
    , cardano-wallet-api
    , cardano-wallet-application-tls
    , cardano-wallet-network-layer
    , cardano-wallet-primitive
    , cardano-wallet-read
    , cardano-wallet-secrets
    , contra-tracer
    , directory
    , file-embed
    , filepath
    , fmt
    , http-client
    , iohk-monitoring                 >=0.2.0.0 && <0.3
    , iohk-monitoring-extra
    , network
    , ntp-client
    , optparse-applicative
    , servant-client
    , servant-client-core
    , servant-server
    , streaming-commons
    , template-haskell
    , text
    , text-class
    , time
    , unliftio
    , wai-middleware-logging
    , warp
    , warp-tls

  exposed-modules:
    Cardano.Wallet.Application.CLI
    Cardano.Wallet.Application.Logging
    Cardano.Wallet.Application.Server
    Cardano.Wallet.Application.Tracers
    Cardano.Wallet.Application.Version
    Cardano.Wallet.Application.Version.TH

  other-modules:   Paths_cardano_wallet_application
